--- a/src/main/resources/templates/employing/EmployingMessage.html
+++ b/src/main/resources/templates/employing/EmployingMessage.html
@@ -3,20 +3,249 @@
 <head>
     <meta charset="UTF-8">
     <title>就业信息</title>
+    <script src="../../static/plugins/jQuery/jquery-2.2.3.min.js"></script>
+    <link rel="stylesheet" href="../../static/plugins/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../static/plugins/adminLTE/css/AdminLTE.css">
+    <link rel="stylesheet" href="../../static/plugins/adminLTE/css/skins/_all-skins.min.css">
+    <link rel="stylesheet" href="../../static/css/style.css">
+    <link rel="stylesheet" href="../../static/plugins/angularjs/toaster.min.css">
+    <script src="../../static/plugins/bootstrap/js/bootstrap.min.js"></script>
+
+    <script src="../../static/plugins/angularjs/angular.min.js"></script>
+    <link rel="stylesheet" href="../../static/plugins/angularjs/pagination.css">
+    <script type="text/javascript" src="../../static/plugins/angularjs/pagination.js"></script>
+    <script src="../../static/js/showLoading.js" type="text/javascript" charset="utf-8"></script>
+    <style>
+        .form-control1{
+            width:15% ;
+            display: inline-block;
+        }
+        .form-control2{
+            width:45% ;
+            display: inline-block;
+        }
+        .s-job{
+            margin: 15px;
+        }
+        .button_1{
+            margin-left: 40%;
+            margin-right: 80px;
+        }
+        .s-pp{
+            margin: 40px;
+        }
+        .i-ss{
+            margin-bottom: 7px;
+        }
+        .s-ww{
+            margin-left: 10px;
+        }
+        .btn-sss{
+            margin-top: 10px;
+            float: left;
+            margin-left: 8%;
+        }
+    </style>
+    <script>
+        var app = angular.module("myApp", []);
+        app.controller("myController", function ($scope, $http) {
+            $http({
+                url:"/Employing/findEmploying",
+                method:"post"
+            }).success(function (response) {
+                $scope.employing=response;
+            })
+            //查询所有单位类型
+            $http({
+                url:"/Dic/findDicByParentId",
+                method:"post",
+                params:{"prentId":700}
+            }).success(function (response) {
+                $scope.unitState=response;
+            })
+            //查询所有劳动合同
+            $http({
+                url:"/Dic/findDicByParentId",
+                method:"post",
+                params:{"prentId":20001}
+            }).success(function (response) {
+                $scope.contractState=response;
+            })
+            //查询所有保险
+            $http({
+                url:"/Dic/findDicByParentId",
+                method:"post",
+                params:{"prentId":800}
+            }).success(function (response) {
+                $scope.insuranceState=response;
+            })
+            //查询所有行业类别
+            $http({
+                url:"/Dic/findDicByParentId",
+                method:"post",
+                params:{"prentId":900}
+            }).success(function (response) {
+                $scope.industryState=response;
+            })
+            //查询所有职称
+            $http({
+                url:"/Dic/findDicByParentId",
+                method:"post",
+                params:{"prentId":10007}
+            }).success(function (response) {
+                $scope.gradeState=response;
+            })
+            //查询所有职称
+            $http({
+                url:"/Dic/findDicByParentId",
+                method:"post",
+                params:{"prentId":10001}
+            }).success(function (response) {
+                $scope.professionalState=response;
+            })
+            //返回结果提示
+            $scope.showModalButton1 = function (slogan) {
+                showModal({
+                    title: "温馨提示",  //提示的标题
+                    content: slogan,  //提示的内容
+                    showCancel: false,  //是否显示取消按钮，默认为 true
+                    cancelText: '取消',  //取消按钮的文字，默认为"取消"，最多 4 个字符
+                    cancelColor: "#fff",  //取消按钮的文字颜色，默认为"#000000"
+                    cancelBgColor: '#4c4c4c',  //取消按钮的背景颜色
+                    confirmText: '确定',
+                    confirmColor: '#fff',
+                    confirmBgColor: '#ff130a',
+                    success: function () {
+
+                    }
+                });
+            }
+            //添加数据
+            $scope.addEmploying=function () {
+
+                var employing = $scope.employing;
+                console.log(employing);
+                $http({
+                    url:"/Employing/addEmploying",
+                    method:"post",
+                    params:employing
+                }).success(function (response){
+                    console.log(response);
+                    $scope.showModalButton1(response.slogan);
+                })
+
+            }
+        })
+    </script>
 
 </head>
-<body>
-<div id="app">
-    {{message}}
-</div>
-<script src="../../static/js/vue/vue.js"></script>
-<script>
-    const app = new Vue({
-        el:'#app',
-        data:{
-            message:'你好'
-        }
-    });
-</script>
+<body ng-app="myApp" ng-controller="myController">
+    <div>
+        <h4 class="alert alert-infoalert alert-info">填写就业信息</h4>
+    </div>
+    <div align="center" style="border: 1px solid black; width: 100%; height: 130px">
+        <div style="border: 1px solid black; width: 50%;height: 50px; margin-top: 20px">
+            <div style="margin-top: 10px"><span style="font-size: 20px">流动人口服务管理系统</span></div>
+        </div>
+        <button class="btn btn-secondary btn-sss" >个人信息</button>
+        <button class="btn btn-secondary btn-sss" >配偶信息</button>
+        <button class="btn btn-secondary btn-sss" >同住家庭成员</button>
+        <button class="btn btn-secondary btn-sss" >计生信息</button>
+        <button  class="btn btn-primary btn-sss" >就业信息</button>
+        <button class="btn btn-secondary btn-sss" >居住信息</button>
+    </div>
+    <table class="table table-bordered table-striped">
+        <tr>
+            <td>用工单位名称:</td>
+            <td><input ng-model="employing.employingName" class="form-control form-control2"></td>
+        </tr>
+        <tr>
+            <td>单位类型:</td>
+            <td>
+                <span ng-repeat="unit in unitState" class="s-job">
+                    <input type="radio" name="unitType" ng-model="employing.unitType" ng-value="unit.id">{{unit.name}}
+                </span>
+            </td>
+        </tr>
+        <tr>
+            <td>单位地址:</td>
+            <td>
+                <input ng-model="employing.unitSiteProvine" class="form-control form-control1 i-ss" ><span class="s-ww">(市县区)</span>
+                <input ng-model="employing.unitSiteAvenue" class="form-control form-control1 i-ss"><span class="s-ww">街办</span>
+                <input ng-model="employing.unitSiteCommunity" class="form-control form-control1 i-ss"><span class="s-ww">社区、居（村）委会</span>
+                <br>
+                <input ng-model="employing.unitSiteWay" class="form-control form-control1"><span class="s-ww">(街路巷)</span>
+                <input ng-model="employing.unitSiteHouse" class="form-control form-control1"><span class="s-ww">门楼牌号</span>
+                <input ng-model="employing.unitSiteBar" class="form-control form-control1"><span class="s-ww">门楼详情</span>
+            </td>
+        </tr>
+        <tr>
+            <td>组织机构代码:</td>
+            <td><input ng-model="employing.organization" class="form-control form-control1">
+                <span class="s-pp">法人代表:</span>
+                <input ng-model="employing.legalPerson" class="form-control form-control1"></td>
+
+        </tr>
+        <tr>
+            <td>劳动合同:</td>
+            <td>
+                <span ng-repeat="contract in contractState" class="s-job">
+                    <input type="radio" name="contractTime" ng-model="employing.contractTime" ng-value="contract.id">{{contract.name}}
+                </span>
+            </td>
+        </tr>
+        <tr>
+            <td>联系电话:</td>
+            <td><input ng-model="employing.unitPhone" class="form-control form-control2"></td>
+        </tr>
+        <tr>
+            <td>参保情况:</td>
+            <td width="85%">
+                <span ng-repeat="ins in insuranceState" class="s-job">
+                    <input type="checkbox" name="insurance" ng-model="employing.insurance" ng-value="ins.id">{{ins.name}}
+                </span>
+            </td>
+        </tr>
+        <tr>
+            <td>单位社保号:</td>
+            <td><input ng-model="employing.unitSocial" class="form-control form-control2"></td>
+        </tr>
+        <tr>
+            <td>单位编号:</td>
+            <td><input ng-model="employing.unitNumber" class="form-control form-control1">
+                <span class="s-pp">用工人数:</span>
+                <input ng-model="employing.unitPerson" class="form-control form-control1"></td>
+        </tr>
+        <tr>
+            <td>行业类别:</td>
+            <td>
+                <span ng-repeat="industry in industryState" class="s-job">
+                    <input type="radio" name="industrySort" ng-model="employing.industrySort" ng-value="industry.id">{{industry.name}}
+                </span>
+            </td>
+        </tr>
+        <tr>
+            <td>职称:</td>
+            <td>
+                <span ng-repeat="gradeSkill in gradeState" class="s-job">
+                    <input type="radio" name="grade" ng-model="employing.grade" ng-value="gradeSkill.id">{{gradeSkill.name}}
+                </span>
+            </td>
+        </tr>
+        <tr>
+            <td>职业技能等级:</td>
+            <td>
+                <span ng-repeat="professional in professionalState" class="s-job">
+                    <input type="radio" name="professionSkill" ng-model="employing.professionSkill" ng-value="professional.id">{{professional.name}}
+                </span>
+            </td>
+        </tr>
+        <tr>
+            <td>职业:</td>
+            <td><input ng-model="employing.profession" class="form-control form-control1"></td>
+        </tr>
+    </table>
+    <button class="btn btn-success button_1" ng-click="addEmploying()">保存</button>
+    <button class="btn btn-info button_2" ng-click="next()">下一项</button>
 </body>
 </html>
