--- a/src/main/resources/templates/mate/mateMessage.html
+++ b/src/main/resources/templates/mate/mateMessage.html
@@ -218,6 +218,17 @@
 <div>
     <h4 class="alert alert-infoalert alert-info">填写配偶信息</h4>
 </div>
+<div align="center" style="border: 1px solid black; width: 100%; height: 130px">
+    <div style="border: 1px solid black; width: 50%;height: 50px; margin-top: 20px">
+        <div style="margin-top: 10px"><span style="font-size: 20px">流动人口服务管理系统</span></div>
+    </div>
+    <button style="border: 1px solid black; width: 100px; height: 25px; margin-top: 10px; float: left; margin-left: 217px;">个人信息</button>
+    <button style="border: 1px solid black; width: 100px; height: 25px; margin-top: 10px; float: left; margin-left: 50px; background-color: #0d6aad;">配偶信息</button>
+    <button style="border: 1px solid black; width: 100px; height: 25px; margin-top: 10px; float: left; margin-left: 50px; ">同住家庭成员</button>
+    <button style="border: 1px solid black; width: 100px; height: 25px; margin-top: 10px; float: left; margin-left: 50px;">计生信息</button>
+    <button style="border: 1px solid black; width: 100px; height: 25px; margin-top: 10px; float: left; margin-left: 50px;">就业信息</button>
+    <button style="border: 1px solid black; width: 100px; height: 25px; margin-top: 10px; float: left; margin-left: 50px;">居住信息</button>
+</div>
 <div>
     <table class="table table-bordered table-striped">
         <tr>
